# electric-mustang-bms

./: .gitignore  README.md  bms-functional-spec.md
hardware/bms/: bms.kicad_prl  bms.kicad_pro  bms.kicad_sch-bak
hardware/bms/bms-backups/bms-2023-01-08_000915/: bms.kicad_prl
src/: CMakeLists.txt  CRC8.cpp  battery.cpp  bms.cpp  comms.cpp  inputs.cpp  io.cpp  isashunt.cpp  led.cpp  main.cpp  module.cpp  pack.cpp  settings.h  shunt.cpp  statemachine.cpp  util.cpp
src/include/: CRC8.h  battery.h  bms.h  comms.h  inputs.h  io.h  isashunt.h  led.h  module.h  pack.h  shunt.h  statemachine.h  util.h
test/: CMakeLists.txt  README.md  battery.cpp  bms.cpp  bms.py  bmstest.cpp  charger.py  comms.cpp  inputs.cpp  io.cpp  main.py  module.cpp  pack.cpp  settings.h  shunt.cpp  test_01.py  testcases0xx.cpp  testcases1xx.cpp  testcases2xx.cpp  testcaseutils.cpp  util.cpp
test/include/: battery.h  bms.h  bmstest.h  comms.h  inputs.h  io.h  module.h  pack.h  shunt.h  testcases0xx.h  testcases1xx.h  testcases2xx.h  testcaseutils.h  util.h
